[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -44.0
margin_right = 59.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="MenuOptions"]
margin_right = 118.0
margin_bottom = 22.0
text = "Resume"

[node name="QuitButton" type="Button" parent="MenuOptions"]
margin_top = 26.0
margin_right = 118.0
margin_bottom = 48.0
text = "Quit"

[node name="MusicButton" type="CheckButton" parent="MenuOptions"]
margin_top = 52.0
margin_right = 118.0
margin_bottom = 84.0
text = "Sound"
[connection signal="pressed" from="MenuOptions/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MenuOptions/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MenuOptions/MusicButton" to="." method="_on_MusicButton_pressed"]
